--- a/frontend/src/pages/profile/components/ProfileHeroBlock/ProfileHeroBlock.scss
+++ b/frontend/src/pages/profile/components/ProfileHeroBlock/ProfileHeroBlock.scss
@@ -218,18 +218,18 @@
     }
 
     &__role {
-      color: #7a8a7a;
+      color: #585e67;
     }
 
     &__dot {
-      background: #7a8a7a;
+      background: #585e67;
     }
 
     &__stat {
       &--skills {
-        background: rgba(33, 160, 56, 0.1);
-        border-color: rgba(33, 160, 56, 0.15);
-        color: #21a038;
+        background: rgba(40, 115, 237, 0.1);
+        border-color: rgba(40, 115, 237, 0.15);
+        color: #2873ed;
       }
 
       &--recommendations {
