--- a/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
+++ b/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
@@ -42,15 +42,15 @@
 // Light theme
 [data-theme="light"] {
   .profile-top-bar {
-    background: #f8faf8;
+    background: #f5f7fa;
 
     &__btn {
-      background: rgba(33, 160, 56, 0.1);
-      color: #21a038;
-      box-shadow: 0px 0px 20px rgba(33, 160, 56, 0.1);
+      background: rgba(0, 0, 0, 0.05);
+      color: #585e67;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
 
       &:hover {
-        background: rgba(33, 160, 56, 0.18);
+        background: rgba(0, 0, 0, 0.08);
       }
     }
   }
