--- a/frontend/src/pages/profile/components/UnifiedBioEditor.scss
+++ b/frontend/src/pages/profile/components/UnifiedBioEditor.scss
@@ -327,7 +327,7 @@
 
     &__history-btn {
       background: rgba(0, 0, 0, 0.03);
-      border-color: rgba(33, 160, 56, 0.2);
+      border-color: rgba(0, 0, 0, 0.1);
       color: rgba(0, 0, 0, 0.5);
 
       &:hover:not(:disabled) {
@@ -338,7 +338,7 @@
 
     &__textarea {
       background: rgba(0, 0, 0, 0.03);
-      border-color: rgba(33, 160, 56, 0.2);
+      border-color: rgba(0, 0, 0, 0.1);
       color: rgba(0, 0, 0, 0.9);
 
       &::placeholder {
@@ -346,7 +346,7 @@
       }
 
       &:focus {
-        border-color: rgba(33, 160, 56, 0.5);
+        border-color: rgba(40, 115, 237, 0.5);
         background: rgba(0, 0, 0, 0.05);
       }
     }
@@ -366,14 +366,14 @@
       }
 
       &--save {
-        background: rgba(33, 160, 56, 0.1);
-        border-color: rgba(33, 160, 56, 0.25);
-        color: #21a038;
+        background: rgba(40, 115, 237, 0.1);
+        border-color: rgba(40, 115, 237, 0.25);
+        color: #2873ed;
       }
     }
 
     &__progress-bar {
-      background: rgba(33, 160, 56, 0.15);
+      background: rgba(40, 115, 237, 0.15);
     }
   }
 }
