Изменен цвет фона

--- a/frontend/src/pages/profile/components/CardEditor.scss
+++ b/frontend/src/pages/profile/components/CardEditor.scss
@@ -891,10 +891,10 @@
 // Light theme
 [data-theme="light"] {
   .card-editor {
-    background: #f5f7fa;
+    background: #edf3ff;
 
     &__top-bar {
-      background: #f5f7fa;
+      background: #edf3ff;
     }
 
     &__top-btn {
@@ -944,7 +944,7 @@
     }
 
     &__card {
-      background: #f9faff;
+      background: #edf3ff;
       border-color: rgba(255, 255, 255, 0.8);
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04);
     }
@@ -1082,7 +1082,7 @@
     }
 
     &__modal {
-      background: #f9faff;
+      background: #edf3ff;
       border-color: rgba(255, 255, 255, 0.8);
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04);
     }
