--- a/frontend/src/pages/profile/components/ProfileInfoCard/ProfileInfoCard.scss
+++ b/frontend/src/pages/profile/components/ProfileInfoCard/ProfileInfoCard.scss
@@ -121,7 +121,7 @@
 [data-theme="light"] {
   .profile-info-cards {
     &__card {
-      background: #f9faff;
+      background: #edf3ff;
       border-color: rgba(255, 255, 255, 0.8);
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04);
     }
