--- a/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
+++ b/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
@@ -42,7 +42,7 @@
 // Light theme
 [data-theme="light"] {
   .profile-top-bar {
-    background: #f5f7fa;
+    background: #edf3ff;
 
     &__btn {
       background: rgba(0, 0, 0, 0.05);
