--- a/frontend/src/shared/ui/PrimaryButton/PrimaryButton.scss
+++ b/frontend/src/shared/ui/PrimaryButton/PrimaryButton.scss
@@ -72,7 +72,7 @@
     box-shadow: $picaton-shadow-card;
 
     &:hover:not(:disabled) {
-      background: darken(#f9faff, 2%);
+      background: darken(#edf3ff, 2%);
       box-shadow: $picaton-shadow-card-hover;
     }
 
