--- a/frontend/src/pages/profile/components/ShareMenu/ShareMenu.scss
+++ b/frontend/src/pages/profile/components/ShareMenu/ShareMenu.scss
@@ -217,7 +217,7 @@
 
   // Cards List
   &__cards {
-    background: #f9faff;
+    background: #edf3ff;
     border-radius: 24px;
     border: 1px solid #fff;
     overflow-y: auto;
@@ -291,7 +291,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 14px 20px;
-    background: #f9faff;
+    background: #edf3ff;
     border-top: 1px solid #e3e3e3;
   }
 
