--- a/frontend/src/pages/profile/components/ProfileInfoCard/ProfileInfoCard.scss
+++ b/frontend/src/pages/profile/components/ProfileInfoCard/ProfileInfoCard.scss
@@ -121,9 +121,9 @@
 [data-theme="light"] {
   .profile-info-cards {
     &__card {
-      background: #edf3ff;
-      border-color: rgba(255, 255, 255, 0.8);
-      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04);
+      background: #f9faff;
+      border-color: white;
+      box-shadow: none;
     }
 
     &__label {
