--- a/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
+++ b/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   width: 100%;
   padding: 10px 0;
-  background: #090909;
+  background: none;
 
   &__btn {
     display: flex;
@@ -26,7 +26,6 @@
     transition: all 0.2s;
 
     &:hover {
-      background: rgba(63, 63, 63, 0.7);
       transform: scale(1.05);
     }
 
@@ -37,23 +36,6 @@
     svg {
       width: 20px;
       height: 20px;
-    }
-  }
-}
-
-// Light theme
-[data-theme="light"] {
-  .profile-top-bar {
-    background: #edf3ff;
-
-    &__btn {
-      background: rgba(0, 0, 0, 0.05);
-      color: #585e67;
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
-
-      &:hover {
-        background: rgba(0, 0, 0, 0.08);
-      }
     }
   }
 }
