Эмодзи переставлены в другие места

--- a/frontend/src/pages/profile/components/ProfileHeroBlock/ProfileHeroBlock.scss
+++ b/frontend/src/pages/profile/components/ProfileHeroBlock/ProfileHeroBlock.scss
@@ -46,14 +46,14 @@
     }
 
     &--2 {
-      top: 45px;
-      right: 100px;
+      top: 62px;
+      right: 87px;
       transform: rotate(-15deg);
     }
 
     &--3 {
-      top: 88px;
-      right: 120px;
+      top: 70px;
+      left: 102px;
       transform: rotate(-15deg);
     }
 
